tests/ui/issues/issue-17551.stderr
error[E0282]: type annotations needed
  --> $DIR/issue-17551.rs:6:17
   |
LL |     let foo = B(marker::PhantomData);
   |                 ^^^^^^^^^^^^^^^^^^^ cannot infer type of the type parameter `T` declared on the struct `PhantomData`
   |
help: consider specifying the generic argument
   |
LL |     let foo = B(marker::PhantomData::<T>);
   |                                    +++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0282`.
